# red

./: README.md  default.nix  home-manager-configuration.nix  red.cabal  shell.nix
nix/: contents.nix  overlay.nix  sources.json
scripts/: format.sh
