cabal-version:      2.2
name:               red
version:            0.0.0.0
category:           html
description:
  Red uses Neovim TOhtml function to generate syntax highlighted code.

common common-extensions
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeApplications
    TypeOperators

common common-options
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-unused-do-bind
    +RTS -A256m -n4m -qg -RTS

-- Generating version bounds can be done with
--     nix-shell --run 'cabal freeze'
common common-dependencies
  build-depends:
      base-noprelude >=4.7 && <5
    , blaze-html
    , optparse-applicative
    , protolude
    , tagsoup

library
  import: common-extensions, common-options, common-dependencies
  hs-source-dirs: src
  build-depends:
    , blaze-html
    , tagsoup
  exposed-modules:

executable red
  import: common-extensions, common-options, common-dependencies
  main-is: red.hs
  hs-source-dirs: bin
  build-depends:
      red
  ghc-options:
    -threaded
